feat: adicionado lógica de criação de OS com base na documentação
